# studio

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs
src/display/: display.rs  error.rs  mod.rs  screen.rs
src/display/desktop/: cursor.rs  error.rs  event.rs  keyboard.rs  manager.rs  mod.rs  pointer.rs  property.rs  screen.rs  window.rs
src/display/desktop/_window/handle/: __event.rs  __sub.rs  mod.rs  properties.rs
src/display/desktop/event/: gamepad.rs  keyboard.rs  mod.rs  pointer.rs  sub.rs  window.rs
src/display/desktop/manager/: mod.rs
src/display/desktop/manager/linux/: README.md  mod.rs
src/display/desktop/provider/: mod.rs
src/display/desktop/provider/linux/: mod.rs  server.rs
src/display/desktop/tests/: manager.rs  mod.rs  properties.rs  window.rs
src/display/event/: controller.rs  dispatcher.rs  keyboard.rs  mod.rs  mouse.rs  window.rs
src/display/mobile/: mod.rs
src/display/mobile/provider/: mod.rs
src/display/provider/: mod.rs
src/display/provider/linux/: mod.rs
tests/: integration.rs  macros.rs  tools.rs
tests/display/: mod.rs
tests/display/_provider/x11/: event.rs
tests/display/desktop/: log.rs  mod.rs  rsrcs.rs  tests.rs
tests/display/desktop/events/: keyboard.rs  mod.rs  mouse.rs  pointer.rs  window.rs
tests/display/provider/x11/: mod.rs  property.rs
tests/interactive/: mod.rs
tests/interactive/display/: mod.rs
tests/interactive/display/_provider/: mod.rs
tests/interactive/display/desktop/: log.rs  mod.rs  tests.rs
tests/noninteractive/display/desktop/: properties.rs
(+38 files in other folders)
